--- a/templates/base.html
+++ b/templates/base.html
@@ -36,5 +36,6 @@
     <footer>
       <p>&copy; 2024 Your Name - Data Analysis Project</p>
     </footer>
+    {% block scripts %}{% endblock %}
   </body>
 </html>
