--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,16 @@
       rel="stylesheet"
       href="{{ url_for('static', filename='style.css') }}"
     />
+    <!-- Choices.js CSS -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/choices.js/public/assets/styles/choices.min.css"
+    />
+    <!-- Choices.js SCRIPT -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/choices.js/public/assets/scripts/choices.min.js"
+      defer
+    ></script>
   </head>
   <body>
     <nav>
