update sql query logic and display

--- a/templates/base.html
+++ b/templates/base.html
@@ -44,7 +44,7 @@
     </main>
 
     <footer>
-      <p>&copy; 2024 Your Name - Data Analysis Project</p>
+      <p>&copy; 2025 Haz Li - Perth Property Project</p>
     </footer>
     {% block scripts %}{% endblock %}
   </body>
