new feature page: compare multiple suburbs and display summary

--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,8 @@
       >
       <div class="nav-links">
         <a href="{{ url_for('add_new_record') }}">Add Record</a>
-        <a href="{{ url_for('explore') }}">Explore Data</a>
+        <a href="{{ url_for('explore') }}">Explore Data (Single)</a>
+        <a href="{{ url_for('compare') }}">Compare (Multi)</a>
       </div>
     </nav>
 
